@@ -207,13 +207,7 @@ public class Roles {
 
 
 
-    public static final Set<String> PRIVILEGED = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
-        SUPERADMIN_ROLE,
-        SUPERPROCESS_ROLE,
-        PUBLISHER_ROLE,
-        SUPPORT_ROLE,
-        SYSTEM_ROLE
-    )));
+    public static final Set<String> PRIVILEGED = Set.of(SUPERADMIN_ROLE, SUPERPROCESS_ROLE, PUBLISHER_ROLE, SUPPORT_ROLE, SYSTEM_ROLE);
 
     public static final Set<String> CAN_CHOOSE_OWNER_TYPE = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
         MIS_ROLE,
